utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/IncludeExcludedModule4.ide
package invalid

typedef module IncludeExcludedModule4 {

}
